--- a/src/app/pages/pre-auth/video-admin/add-video/add-video.component.css
+++ b/src/app/pages/pre-auth/video-admin/add-video/add-video.component.css
@@ -1,12 +1,58 @@
-.contenedors{
+.contenedors {
     display: grid;
     justify-content: center;
-    }
-    
-    .ajustButton{
-        display: contents;
-    }
-    
-    .description{
-        width: 20em;
-    }
+}
+
+.ajustButton {
+    display: contents;
+}
+
+.description {
+    width: 20em;
+}
+
+
+
+
+
+
+
+
+.contenedor {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.contenedor-formulario {
+    width: 400px;
+}
+
+.download {
+    background: #1081ff;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
+
+a {
+    text-decoration: underline;
+    color: #FFFFFF;
+}
+
+.btnSubir {
+    display: grid;
+    margin-inline: auto;
+    text-align: -webkit-center;
+}
+
+.inputSelect {
+    display: block;
+    color: transparent;
+}
+
+.adjstInput{
+    text-align: center;
+}
