--- a/src/app/pages/main/about/about.component.html
+++ b/src/app/pages/main/about/about.component.html
@@ -1,6 +1,6 @@
 <section class="seccion" data-aos="fade-right">
 	<div class="inner">
-		<h1 class="mt-3"><span class="typed3"></span></h1>
+		<h1 class="mt-3"><span>Propósitos</span></h1>
 		<div class="seccion__texto">
 			<p><strong>El Centro de Innovación Virtual para la Educación y el Trabajo</strong> surge en 2019 como una
 				nueva oferta educativa de Suterh con los propósitos de:</p>
