--- a/src/app/pages/pre-auth/video-admin/video-admin.component.html
+++ b/src/app/pages/pre-auth/video-admin/video-admin.component.html
@@ -23,12 +23,14 @@
                 <h2>Videos</h2>
             </div>
 
-            <div class="col-md-4 mb-3" *ngFor="let vide of videos | paginate: { itemsPerPage: 3, currentPage: page }">
+            <div class="col-md-4 mb-3" *ngFor="let vide of videos | paginate: { itemsPerPage: 2, currentPage: page }">
 
                 <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                     <div class="img-wrap" style="height: 300px;width: 100%;">
-                        <video controls width="400" height="400" autoplay>
-                            <source src="{{vide.video}}" type="video/mp4">
+                        <video controls width="100%" height="100%" autoplay>
+                            <source
+                                src="{{vide.url}}"
+                                type="video/mp4">
                         </video>
                     </div>
                 </div>
