change table Buy 19

--- a/src/app/pages/main/contactanos/contactanos.component.html
+++ b/src/app/pages/main/contactanos/contactanos.component.html
@@ -33,12 +33,12 @@
                         <div class="col-12 col-md-6 col-xl-12">
                             <div class="contact-item">
                                 <div class="contact-icon">
-                                    <i class="lni lni-alarm-clock"></i>
+                                    <i class="las la-business-time"></i>
                                 </div>
                                 <div class="contact-content">
                                     <h4>Shedule</h4>
-                                    <p>24 Hours / 7 Days Open </p>
-                                    <p>Office time: 10 AM - 5:30 PM</p>
+                                    <p>12 Horas / 6 dias abierto </p>
+                                    <p>Horario oficina: 8:00 AM - 6:00 PM</p>
                                 </div>
                             </div>
                         </div>
