--- a/src/app/pages/main/contactanos/contactanos.component.html
+++ b/src/app/pages/main/contactanos/contactanos.component.html
@@ -24,9 +24,20 @@
                                     <i class="las la-map-marker"></i>
                                 </div>
                                 <div class="contact-content">
-                                    <h4>Address</h4>
-                                    <p>175 5th Ave, New York, NY 10010 </p>
-                                    <p>United States</p>
+                                    <h4>Email</h4>
+                                    <p>Colombia, Cali</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-12">
+                            <div class="contact-item">
+                                <div class="contact-icon">
+                                    <i class="las la-map-marker"></i>
+                                </div>
+                                <div class="contact-content">
+                                    <h4>Direccion</h4>
+                                    <p>Carrera 30 # 9-18 </p>
+                                    <p>Colombia, Cali</p>
                                 </div>
                             </div>
                         </div>
@@ -36,8 +47,8 @@
                                     <i class="las la-business-time"></i>
                                 </div>
                                 <div class="contact-content">
-                                    <h4>Shedule</h4>
-                                    <p>12 Horas / 6 dias abierto </p>
+                                    <h4>Horario atención</h4>
+                                    <p>Lunes a Sabado </p>
                                     <p>Horario oficina: 8:00 AM - 6:00 PM</p>
                                 </div>
                             </div>
