change table Buy 90

--- a/src/app/pages/main/contactanos/contactanos.component.html
+++ b/src/app/pages/main/contactanos/contactanos.component.html
@@ -12,7 +12,7 @@
                                 <div class="contact-icon">
                                     <i class="lab la-whatsapp"></i>
                                 </div>
-                                <div class="contact-content">
+                                <div class="contact-content" (click)="whatssapClick()">
                                     <h4>Whatssap</h4>
                                     <p>316 481 4881</p>
                                 </div>
